# eina

./: .gitignore  .gitmodules  .sparkleshare  AUTHORS  BUGS  ChangeLog  HACKING  IDEAS  Makefile.am  Makefile.am.ui2h  NEWS  README  REVIEW  TODO  TODO.Gtk+-3  about.html  acinclude.m4  autogen.sh  configure.ac  configure.in  contact.html  development.html  download.html  eina-0.6.pc.in  eina-0.7.pc.in  env.sh  faq.html  features.html  index.html  params.json  plugins.html  run-local.sh  run-uninstalled.sh
data/: Makefile.am  eina-0.10.pc.in  eina.ai  eina.desktop.in  eina.pc.in  gel-1.0.pc.in  gel-2.0-uninstalled.pc.in  gel-2.0.pc.in  gel-ui-1.0.pc.in  gel-ui-2.0-uninstalled.pc.in  gel-ui-2.0.pc.in  lomo-2.0-uninstalled.pc.in  lomo-2.0.pc.in  lomo-player.xml  net.sourceforge.eina.gschema.xml.in.in
eina/: Makefile.am  about.c  about.h  art.c  art.h  artwork.c  artwork.h  artwork2.c  artwork2.h  base.c  base.h  class-base.c  class-conf-file.c  class-conf-file.h  cover.c  curl-engine.c  curl-engine.h  dbus.c  dbus.h  dock.c  dock.h  dock2.c  eina-app.c  eina-artwork.c  eina-artwork.h  eina-clutty.c  eina-clutty.h  eina-conf-file.c  eina-conf.h  eina-cover.c  eina-cover.h  eina-file-chooser-dialog.c  eina-file-chooser-dialog.h  eina-gtk3.c  eina-ige.c  eina-lomo.c  eina-lomo.h  eina-obj.c  eina-obj.h  eina-player-cover.c  (+67 more)
eina/adb/: Makefile.am  adb.c  adb.h  adb.ini  adb.plugin.in  eina-adb-lomo.c  eina-adb-lomo.h  eina-adb-plugin.c  eina-adb-plugin.h  eina-adb-result.c  eina-adb-result.h  eina-adb-upgrade.c  eina-adb.c  eina-adb.h  register.c  register.h
eina/application/: Makefile.am  application.c  application.h  application.ini
eina/art/: Makefile.am  art.c  art.h  art.ini  art.plugin.in  e-art.c  e-art.h  e-backend.c  e-backend.h  e-search.c  e-search.h  e-test-backends.c  e-test-backends.h  ea.c  ea.h  eina-art-backend.c  eina-art-backend.h  eina-art-plugin.c  eina-art-plugin.h  eina-art-search.c  eina-art-search.h  eina-art-test-backends.c  eina-art-test-backends.h  eina-art.c  eina-art.h
eina/clutty/: Makefile.am  clutty.c  clutty.ini  clutty.plugin.in  eina-clutty-plugin.c  eina-cover-clutter.c  eina-cover-clutter.h
eina/core/: Makefile.am  eina-activatable.c  eina-activatable.h  eina-application.c  eina-application.h  eina-extension.h  eina-file-chooser-dialog.c  eina-file-chooser-dialog.h  eina-file-utils.c  eina-file-utils.h  eina-fs.c  eina-fs.h  eina-stock.c  eina-stock.h  eina-window.c  eina-window.h
eina/data/: Makefile.am
eina/dbus/: Makefile.am  dbus.c  dbus.h  dbus.ini  dbus.plugin.in  eina-dbus-plugin.c  lomo-player-instropection.xml.h
eina/dock/: Makefile.am  dock.c  dock.h  dock.ini  dock.plugin.in  eina-dock-plugin.c  eina-dock-plugin.h  eina-dock-tab.c  eina-dock-tab.h  eina-dock-tab.vala  eina-dock.c  eina-dock.h
eina/ext/: Makefile.am  curl-engine.c  curl-engine.h  eina-activatable.c  eina-activatable.h  eina-application.c  eina-application.h  eina-clutty.c  eina-clutty.h  eina-conf-file.c  eina-conf.h  eina-cover-clutter.c  eina-cover-clutter.h  eina-cover-image-mask.h  eina-cover-image.c  eina-cover-image.h  eina-cover.c  eina-cover.h  eina-ext-marshallers.list  eina-extension.h  eina-file-chooser-dialog.c  eina-file-chooser-dialog.h  eina-file-utils.c  eina-file-utils.h  eina-fs.c  eina-fs.h  eina-plugin-dialog-ui.h  eina-plugin-dialog.c  eina-plugin-dialog.h  eina-plugin-dialog.ui  eina-plugin-properties.c  eina-plugin-properties.h  eina-plugin-properties.ui  eina-preferences-dialog-marshallers.list  eina-preferences-dialog.c  eina-preferences-dialog.h  eina-preferences-tab.c  eina-preferences-tab.h  eina-seek.c  eina-seek.h  (+6 more)
eina/fieshta/: Makefile.am  eina-fieshta-behaviour.c  eina-fieshta-behaviour.h  fieshta-stage.c  (+11 more)
gel/: Makefile.am  gel-app.c  gel-app.h  gel-beef.c  gel-beef.h  gel-bind.c  gel-bind.h  gel-fs-scanner.c  gel-fs-scanner.h  gel-hub.c  gel-hub.h  gel-hub2.c  gel-hub2.h  gel-io-async-read-dir.c  gel-io-async-read-dir.h  gel-io-async-read-op.c  gel-io-async-read-op.h  gel-io-misc.c  gel-io-misc.h  gel-io-op-result.c  gel-io-op-result.h  gel-io-ops.c  gel-io-ops.h  gel-io-recurse-tree.c  gel-io-recurse-tree.h  gel-io-resources.c  gel-io-resources.h  gel-io-scanner.c  gel-io-scanner.h  gel-io-simple-ops.c  gel-io-simple-ops.h  gel-io-tree.c  gel-io-tree.h  gel-io.c  gel-io.h  gel-job-queue.c  gel-job-queue.h  gel-marshallers.list  gel-misc.c  gel-misc.h  (+27 more)
libghub/: Makefile.am  ghub-marshal.c  ghub-marshal.h  ghub.c  ghub.h
lomo/: Makefile.am  lomo-em-art-backend.c  lomo-em-art-backend.h  lomo-em-art-backends.c  lomo-em-art-backends.h  lomo-em-art-provider.c  lomo-em-art-provider.h  lomo-em-art-search.c  lomo-em-art-search.h  lomo-em-art.c  lomo-em-art.h  lomo-logger.c  lomo-logger.h  lomo-marshal.list  lomo-marshallers.list  lomo-metadata-parser.c  lomo-metadata-parser.h  lomo-player-default-vtable.c  lomo-player-default-vtable.h  lomo-player-old.c  lomo-player-old.h  lomo-player.c  lomo-player.h  lomo-playlist.c  lomo-playlist.h  lomo-stats.c  lomo-stats.h  lomo-stream.c  lomo-stream.h  lomo-util.c  lomo-util.h  lomo.h  meta.c  meta.h  pl.c  pl.h  player-default-vtable.c  player-default-vtable.h  player-priv.c  player-priv.h  (+7 more)
misc/: Makefile.am  eina-0.8.pc.in  eina.applications  eina.desktop.in  eina.keys  eina.schemas  stable-schema.sql
pixmaps/: Makefile.am  cover-mask.xcf  cover-unknow.xcf  loading-spin-generate-frames.sh  logo-v1.xcf  volume.xcf
plugins/: Makefile.am
src/: Makefile.am  base.c  base.h  class-base.h  class-conf-file.h  cover.c  cover.h  eina-file-chooser-dialog.c  eina-io-dialog.h  eina-player-volume.h  ether.c  ether.h  fs.c  fs.h  g-ext-curl.c  iface.c  iface.h  log.c  log.h  lomo.c  lomo.h  main.c  player.c  player.h  playlist.c  playlist.h  settings.c  settings.h  template.c  template.h  vogon.c  vogon.h
ui/: Makefile.am  about.glade  about.ui  dock.glade  dock.ui  log.glade  log.ui  player-menu.ui  player-preferences.glade  player-preferences.ui  player.glade  player.gladep  player.ui  playlist.glade  playlist.gladep  playlist.ui  plugins.glade  plugins.ui  vogon.glade  vogon.gladep
(+394 files in other folders)
