SUBDIRS = \
	build   \
	gel     \
	lomo    \
	eina    \
	plugins \
	pixmaps \
	data    \
	docs    \
	icons   \
	ui      \
	po

EXTRA_DIST = \
	run-uninstalled.sh \
	intltool-extract.in intltool-merge.in intltool-update.in \
	AUTHORS BUGS COPYING INSTALL NEWS README

ACLOCAL_AMFLAGS = -I m4
DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc

